# StyleSpark

./: CODEOWNERS  Dockerfile  README.md  action.yml  analyze.py  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
