[tool.poetry]
name = "stylespark"
version = "1.0"
description = "GitHub action that uses an LLM to tell you what famous programmer's style your code most closely matches."
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
gpt4all = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
